Fix alignment, add create route

--- a/resources/public/less/site.less
+++ b/resources/public/less/site.less
@@ -43,6 +43,23 @@ a:hover {
   margin-right: 20px;
 }
 
+.edit-delete-cancel-save {
+  .delete { flex: 1 }
+
+  .aligner {
+    flex: 6;
+    .cancel-save {
+      max-width: 600px;
+      display: flex;
+      justify-content: flex-end;
+      .cancel {
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
 .space {
   border-width: thin;
   border-color: #DDDDDD;
